Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6875

thandle_get_sub_by_dt dereferences ERR_PTR pointer on error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      thandle_get_sub_by_dt function dereferences PTR_ERR pointer:

                      st = create_sub_thandle_with_thandle(top_th,
                                      top_th->tt_master_sub_thandle);
                      if (IS_ERR(st))
                              GOTO(stop_trans, rc = PTR_ERR(st));
      ....
      stop_trans:
              if (rc < 0) {
                      if (st != NULL)
                              OBD_FREE_PTR(st);
      

            di.wang Di Wang (Inactive)
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: