LU-6875 update: set st to NULL in error handler

In thandle_get_sub_by_dt, if create sub thandle fails,
it should reset st to NULL, otherwise st, whose value
is ERR_PTR(rc), might be freeed incorrectly in the
following error handler path.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I7262593fa5aa6bc3f0ed418aaa5637e84077088b